--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,80 @@
 header {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
+    height: 53px;
+    /* background-color: #46C2CB; */
+    background-color: #0C356A;
+    color: white;
 }
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+main {
+    background-color: white;
+    border-radius: 5px;
+    margin: 1em auto;
+    max-width: 90vw;
+}
+
+section#persegi h2:first-of-type, section#persegi-panjang h2:first-of-type, section#segitiga h2:first-of-type {
+    align-items: center;
+    background-color: #0C356A;
+    color: white;
+    display: flex;
+    height: 100px;
+    justify-content: center;
+}
+
+img {
+    display: block;
+    height: auto;
+    margin: 30px auto 10px;
+    max-width: 100%;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center;
+}
+
+section#persegi {
+    border: 3px solid #0C356A;
+    display: none;
+    margin: 20px auto;
+}
+
+.active {
+    display: block !important;
+}
+
+nav .btn-choice {
+    border-radius: 5px;
+    background-color: #46C2CB;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+nav .btn-choice:hover {
+    background-color: #333;
+}
+
+.count {
+    padding: 15px 20px;
+    margin: 4px 4px;
+}
+
+.count input {
+    width: 100%;
+    padding: 5px 8px;
+    margin-top: 5px;
+    box-sizing: border-box;
+    border: 3px solid wheat;
 }
