--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,16 @@ input:focus {
     background-color: #333;
 }
 
+.btn-submit{
+    border-radius: 5px;
+    text-align: center;
+    background-color: aqua;
+    color: black;
+    padding: 5px;
+    margin: 3px;
+    cursor: pointer;
+}
+
 .count {
     padding: 15px 20px;
     margin: 4px 4px;
